<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/round_background_gray"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Nombre para el gasto -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameEditTextExpense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_expense_name"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Descripcion del gasto -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descriptionEditTextExpense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_description"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Importe -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/amountEditTextExpense"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_expense_amount"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- ChipGroup para los tipos de gastos -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupExpenseType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:singleSelection="true">
                <!-- Tipo de gasto compras -->
                <com.google.android.material.chip.Chip
                    android:id="@+id/chipShopping"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_chip_shopping"
                    android:textSize="13sp" />

                <!-- Tipo de gasto vivienda -->
                <com.google.android.material.chip.Chip
                    android:id="@+id/chipHouse"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_chip_house"
                    android:textSize="13sp" />

                <!-- Tipo de gasto vehiculo -->
                <com.google.android.material.chip.Chip
                    android:id="@+id/chipVehicle"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_chip_vehicle"
                    android:textSize="13sp" />

                <!-- Tipo de gasto otros -->
                <com.google.android.material.chip.Chip
                    android:id="@+id/chipOther"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_chip_other"
                    android:textSize="13sp" />
            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>
    </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSendExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="16dp"
        android:src="@drawable/ic_confirm"
        app:backgroundTint="@color/accent_color_primaryDark"
        app:fabSize="normal"
        />

</LinearLayout>
